--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,11 +1,13 @@
 version: 1.0
-runtime: python3
+runtime: python311
 build:
   commands:
     build:
-      - pip install -r requirements.txt
+      - pip3 install pipenv
+      - pipenv install
+      - pip3 install -r requirements.txt
 run:
-  runtime-version: 3.8.16
+  runtime-version: 3.11.0
   command: sh startup.sh
   network:
     port: 8000
