--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,11 +3,11 @@ runtime: python311
 build:
   commands:
     build:
-      - pip3 install -r requirements.txt 
-      - pip3 install gunicorn 
+      - python3.11 -m ensurepip --upgrade
+      - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11.9
-  command: gunicorn myproject.wsgi:application --bind 0.0.0.0:8000 
+  command: python -m gunicorn myproject.wsgi:application --bind 0.0.0.0:8000 
   network:
     port: 8000
     
