--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,7 +7,11 @@ build:
       - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11.9
-  command: python -m gunicorn myproject.wsgi:application --bind 0.0.0.0:8000 
+  pre-run:
+    - pip3 install gunicorn
+    - pip3 install -r requirements.txt
+    - which gunicorn
+  command: gunicorn myproject.wsgi:application --bind 0.0.0.0:8000 
   network:
     port: 8000
     
