--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -6,12 +6,19 @@ build:
       - python3.11 -m ensurepip --upgrade
       - pip3 install -r requirements.txt
 run:
-  runtime-version: 3.11.9
+  runtime-version: 3.11
   pre-run:
     - pip3 install gunicorn
     - pip3 install -r requirements.txt
     - which gunicorn
-  command: gunicorn myproject.wsgi:application --bind 0.0.0.0:8000 
+  command: gunicorn myproject.wsgi:application --log-file -
   network:
     port: 8000
-    
+    env: 8000
+  env:
+    - name: DEBUG
+      value: "on"
+    - name: SECRET_KEY
+      value: "django-insecure-r9&@s6#zn^!7ueptzu@2q_x21cuo@ic_b5_p5z!aq@go2yd4f2"
+    - name: ALLOWED_HOSTS
+      value: "*"
