--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,10 +7,8 @@ build:
       - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11
-  pre-run:
-    - pip3 install gunicorn
-    - pip3 install -r requirements.txt
-    - which gunicorn
+  command: pip3 install gunicorn django_apprunner.wsgi
+  pre-run: []
   command: gunicorn myproject.wsgi:application --log-file -
   network:
     port: 8000
