--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ Faker==19.13.0
 fonttools==4.55.3
 frozenlist==1.5.0
 groq==0.13.1
-gunicorn>=20.1.0
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -42,7 +42,7 @@ matplotlib==3.10.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 mysql-connector-python==9.1.0
-numpy>=1.22.4
+numpy==2.2.6
 openai==1.58.1
 openpyxl==3.1.5
 orjson==3.10.13
@@ -69,3 +69,12 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 sqlglot==25.34.1
+sqlglotrs==0.3.0
+sqlparse==0.5.3
+tenacity==9.1.2
+tqdm==4.67.1
+typing-inspect==0.9.0
+typing_extensions==4.14.1
+urllib3==2.5.0
+whitenoise==6.4.0
+yarl==1.20.1
