--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,7 +7,7 @@ build:
       - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11
-  command: /usr/local/bin/gunicorn myproject.wsgi:application --bind=0.0.0.0:8000
+  command: python -m gunicorn myproject.wsgi:application --bind=0.0.0.0:8000
   network:
     port: 8000
     env: 8000
